<resources>
    <string name="app_name">FinalMovil</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="noregistrado">¿No está registrado?</string>
    <string name="registrar"><u>Registrese aquí</u></string>
    <!--Activity registro-->
    <string name="registro">Registro</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rusuario">Nombre de usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="rcontrasena">Contraseña</string>
    <string name="confcontrasena">Confirmar contraseña</string>
    <string name="title_activity_menuprincipal">Menuprincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
   <!--menu opciones-->
    <string name="galeria">Galeria</string>
    <string name="tomarfoto">Toma una fotografía</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <!--tomar foto-->
    <string name="etiquetafoto">Para tomar una fotografía, seleccione el siguiente ícono</string>
    <string name="img">img</string>
</resources>